feat: expand user provisioning during onboarding and update dashboard authentication routing